[metadata]
name = microblog-git
url = https://github.com/sio/microblog-python
description = Python renderer for git microblogs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = blog, microblog, git
license = Apache-2.0
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License


[options]
packages =
    microblog
    pelican.plugins.microblog
package_dir =
    =src
install_requires =
    GitPython
    markdown
    pymdown-extensions
    toml


[options.package_data]
* = *.md, *.toml


[options.entry_points]
console_scripts =
    microblog = microblog.cli:main
